@@ -6,8 +6,7 @@ import android.os.Bundle;
 import android.text.TextUtils;
 import android.util.Base64;
 import android.webkit.WebView;
-import com.baidu.android.imsdk.db.TableDefine;
-import com.baidu.d.a.a;
+import com.baidu.i.a.a;
 import com.baidu.sapi2.SapiAccountManager;
 import com.baidu.sapi2.SapiWebView;
 import com.baidu.sapi2.activity.BaseActivity;
@@ -18,19 +17,20 @@ import com.baidu.sapi2.utils.SapiUtils;
 import com.baidu.sapi2.utils.enums.BindWidgetAction;
 import com.baidu.sapi2.utils.enums.Domain;
 import com.baidu.sapi2.utils.h;
+import com.baidu.searchbox.ui.animview.praise.PraiseDataPassUtil;
 import com.baidu.tbadk.coreExtra.data.AuthVerifyData;
 import com.baidu.tieba.passaccount.a.b;
 import com.baidu.tieba.passaccount.framework.PassManagerStatic;
+import com.baidu.webkit.internal.ETAG;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.List;
-import org.apache.http.protocol.HTTP;
-/* loaded from: classes3.dex */
+/* loaded from: classes5.dex */
 public class AuthActivity extends BaseActivity {
     private String authToken;
     private String bduss;
-    private SapiResult result = new SapiResult();
+    private SapiResult ist = new SapiResult();
     private String tpl;
     private int type;
 
@@ -40,13 +40,13 @@ public class AuthActivity extends BaseActivity {
         super.onCreate(bundle);
         try {
             setContentView(a.f.layout_sapi_sdk_webview_with_title_bar);
-            PassManagerStatic.bPr();
+            PassManagerStatic.cgC();
             init();
             setupViews();
         } catch (Throwable th) {
             reportWebviewError(th);
-            this.result.setResultCode(-202);
-            this.result.setResultMsg(SapiResult.ERROR_MSG_UNKNOWN);
+            this.ist.setResultCode(-202);
+            this.ist.setResultMsg("网络连接失败，请检查网络设置");
             p(false, null);
         }
     }
@@ -60,21 +60,21 @@ public class AuthActivity extends BaseActivity {
             this.authToken = getIntent().getStringExtra("EXTRA_AUTH_TOKEN");
             this.tpl = SapiAccountManager.getInstance().getSapiConfiguration().getTpl();
             if (TextUtils.isEmpty(this.authToken) || TextUtils.isEmpty(this.tpl)) {
-                this.result.setResultCode(-204);
-                this.result.setResultMsg("参数错误");
+                this.ist.setResultCode(-204);
+                this.ist.setResultMsg("参数错误");
                 p(false, null);
             }
         } else if (this.type == 1 || this.type == 2) {
             this.bduss = getIntent().getStringExtra("EXTRA_BDUSS");
             this.tpl = SapiAccountManager.getInstance().getSapiConfiguration().getTpl();
             if (TextUtils.isEmpty(this.bduss)) {
-                this.result.setResultCode(-204);
-                this.result.setResultMsg("参数错误");
+                this.ist.setResultCode(-204);
+                this.ist.setResultMsg("参数错误");
                 p(false, null);
             }
         } else {
-            this.result.setResultCode(-204);
-            this.result.setResultMsg("参数错误");
+            this.ist.setResultCode(-204);
+            this.ist.setResultMsg("参数错误");
             p(false, null);
         }
     }
@@ -83,42 +83,42 @@ public class AuthActivity extends BaseActivity {
         return new String(Base64.decode(str.getBytes(), 0));
     }
 
-    private String bPd() {
+    private String cgn() {
         ArrayList arrayList = new ArrayList();
         try {
-            arrayList.add(new PassNameValuePair("adapter", URLEncoder.encode("3", HTTP.UTF_8)));
+            arrayList.add(new PassNameValuePair("adapter", URLEncoder.encode("3", "UTF-8")));
             arrayList.add(new PassNameValuePair("banner", "1"));
             arrayList.add(new PassNameValuePair("isnew", "true"));
-            arrayList.add(new PassNameValuePair("token", URLEncoder.encode(this.authToken, HTTP.UTF_8)));
-            arrayList.add(new PassNameValuePair(TableDefine.PaSubscribeColumns.COLUMN_TPL, URLEncoder.encode(this.tpl, HTTP.UTF_8)));
-            arrayList.add(new PassNameValuePair("u", URLEncoder.encode(getHost(h.s) + "?__wp-action=auth-widget", HTTP.UTF_8)));
+            arrayList.add(new PassNameValuePair("token", URLEncoder.encode(this.authToken, "UTF-8")));
+            arrayList.add(new PassNameValuePair("tpl", URLEncoder.encode(this.tpl, "UTF-8")));
+            arrayList.add(new PassNameValuePair("u", URLEncoder.encode(getHost(h.s) + "?__wp-action" + ETAG.EQUAL + "auth-widget", "UTF-8")));
         } catch (UnsupportedEncodingException e) {
             Log.e(e);
         }
         return (SapiAccountManager.getInstance().getConfignation().getEnvironment().getWap() + "/passport/authwidget") + "?" + SapiUtils.createRequestParams(arrayList);
     }
 
-    private String bPe() {
+    private String getModifyPwdUrl() {
         ArrayList arrayList = new ArrayList();
         try {
-            arrayList.add(new PassNameValuePair("u", URLEncoder.encode(getHost(h.s) + "?__wp-action=modify-pwd", HTTP.UTF_8)));
+            arrayList.add(new PassNameValuePair("u", URLEncoder.encode(getHost(h.s) + "?__wp-action" + ETAG.EQUAL + "modify-pwd", "UTF-8")));
             arrayList.add(new PassNameValuePair("adapter", "3"));
             arrayList.add(new PassNameValuePair("banner", "1"));
             arrayList.add(new PassNameValuePair("t", String.valueOf(System.currentTimeMillis())));
-            arrayList.add(new PassNameValuePair(TableDefine.PaSubscribeColumns.COLUMN_TPL, URLEncoder.encode(this.tpl, HTTP.UTF_8)));
-            arrayList.add(new PassNameValuePair("client", "android"));
+            arrayList.add(new PassNameValuePair("tpl", URLEncoder.encode(this.tpl, "UTF-8")));
+            arrayList.add(new PassNameValuePair("client", PraiseDataPassUtil.KEY_FROM_OS));
             arrayList.add(new PassNameValuePair("clientfrom", "native"));
         } catch (UnsupportedEncodingException e) {
             Log.e(e);
         }
         String str = (SapiAccountManager.getInstance().getConfignation().getEnvironment().getWap() + "/wp/passwordindex") + "?" + SapiUtils.createRequestParams(arrayList);
         if (arrayList.size() > 0) {
-            return str + "&" + SapiUtils.createRequestParams(arrayList);
+            return str + ETAG.ITEM_SEPARATOR + SapiUtils.createRequestParams(arrayList);
         }
         return str;
     }
 
-    private List<PassNameValuePair> bPf() {
+    private List<PassNameValuePair> cgo() {
         Domain environment = SapiAccountManager.getInstance().getConfignation().getEnvironment();
         String buildBDUSSCookie = SapiUtils.buildBDUSSCookie(environment.getWap().replace("http://", "").replace(SapiUtils.COOKIE_HTTPS_URL_PREFIX, "").replaceAll("(:[0-9]{1,4})?", ""), "BIND_BDUSS", "");
         ArrayList arrayList = new ArrayList();
@@ -164,11 +164,11 @@ public class AuthActivity extends BaseActivity {
                 public void onPageFinished(WebView webView, String str) {
                 }
             });
-            this.sapiWebView.loadUrl(bPd());
+            this.sapiWebView.loadUrl(cgn());
         } else if (this.type == 1) {
             setTitleText(a.g.sapi_sdk_title_modify_pwd);
             SapiAccountManager.getInstance().getAccountService().webLogin(this, this.bduss);
-            this.sapiWebView.loadUrl(bPe(), bPf());
+            this.sapiWebView.loadUrl(getModifyPwdUrl(), cgo());
             this.sapiWebView.setChangePwdCallback(new SapiWebView.ChangePwdCallback() { // from class: com.baidu.tieba.passaccount.app.AuthActivity.4
                 @Override // com.baidu.sapi2.SapiWebView.ChangePwdCallback
                 public void onSuccess() {
@@ -196,8 +196,8 @@ public class AuthActivity extends BaseActivity {
     @Override // com.baidu.sapi2.activity.TitleActivity
     public void onClose() {
         super.onClose();
-        this.result.setResultCode(-301);
-        this.result.setResultMsg("流程已结束");
+        this.ist.setResultCode(-301);
+        this.ist.setResultMsg("流程已结束");
         p(false, null);
     }
 
@@ -213,13 +213,13 @@ public class AuthActivity extends BaseActivity {
     /* JADX INFO: Access modifiers changed from: private */
     public void p(boolean z, String str) {
         if (this.type == 0) {
-            b.bPw().r(z, str);
+            b.cgH().r(z, str);
         } else if (this.type == 1) {
-            b.bPw().nG(z);
+            b.cgH().oU(z);
         } else if (this.type == 2) {
-            b.bPw().nH(z);
+            b.cgH().oV(z);
         } else {
-            b.bPw().a((AuthVerifyData.c) null);
+            b.cgH().a((AuthVerifyData.c) null);
         }
         finish();
     }
